--- a/Logave/Base.lproj/Main.storyboard
+++ b/Logave/Base.lproj/Main.storyboard
@@ -9,15 +9,15 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="9lg-v4-rQN"/>
+                        <viewControllerLayoutGuide type="bottom" id="UZe-kH-2ht"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="owl-wb-KVM">
-                                <rect key="frame" x="283" y="20" width="35" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="owl-wb-KVM">
+                                <rect key="frame" x="143" y="4" width="35" height="30"/>
                                 <state key="normal" title="Push">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -25,8 +25,8 @@
                                     <action selector="toNewController:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cVC-HI-Nqn"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1dW-jw-jY0">
-                                <rect key="frame" x="278" y="51" width="44" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1dW-jw-jY0">
+                                <rect key="frame" x="138" y="35" width="44" height="30"/>
                                 <state key="normal" title="Delete">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -34,12 +34,9 @@
                                     <action selector="minus:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dZ5-WF-H7d"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Api-ht-8VU">
-                                <rect key="frame" x="193" y="127" width="215" height="346"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Api-ht-8VU">
+                                <rect key="frame" x="53" y="111" width="215" height="346"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="215" id="Ery-aU-Bh9"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -64,45 +61,26 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="centerY" secondItem="1dW-jw-jY0" secondAttribute="centerY" constant="234" id="25m-y4-NRG"/>
-                            <constraint firstAttribute="centerY" secondItem="Api-ht-8VU" secondAttribute="centerY" id="Bi5-xo-xsD"/>
-                            <constraint firstAttribute="centerY" secondItem="owl-wb-KVM" secondAttribute="centerY" constant="265" id="CIw-Qt-CPr"/>
-                            <constraint firstAttribute="centerY" secondItem="owl-wb-KVM" secondAttribute="centerY" constant="265" id="Jkx-9A-KR2"/>
-                            <constraint firstItem="Api-ht-8VU" firstAttribute="top" secondItem="1dW-jw-jY0" secondAttribute="bottom" constant="46" id="PTQ-xL-aGP"/>
-                            <constraint firstAttribute="centerY" secondItem="owl-wb-KVM" secondAttribute="centerY" constant="265" id="Y38-2y-Jqu"/>
-                            <constraint firstAttribute="centerY" secondItem="owl-wb-KVM" secondAttribute="centerY" constant="265" id="alf-Fg-GoS"/>
-                            <constraint firstItem="owl-wb-KVM" firstAttribute="centerX" secondItem="1dW-jw-jY0" secondAttribute="centerX" id="fiA-Mv-7L0"/>
-                            <constraint firstAttribute="centerX" secondItem="Api-ht-8VU" secondAttribute="centerX" constant="-0.5" id="oWu-ZB-U8u"/>
-                            <constraint firstAttribute="centerX" secondItem="1dW-jw-jY0" secondAttribute="centerX" id="vn9-DX-1gL"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="CIw-Qt-CPr"/>
-                                <exclude reference="Y38-2y-Jqu"/>
-                                <exclude reference="alf-Fg-GoS"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="nameField" destination="Ghz-aI-czX" id="wFZ-mn-oZ8"/>
                         <outlet property="sNameField" destination="teS-yr-T9a" id="NPU-41-zdu"/>
                         <outlet property="testText" destination="Api-ht-8VU" id="PBq-1s-jLj"/>
                         <segue destination="SAI-Nh-7ZG" kind="presentation" identifier="LogingIn" id="kSE-zs-exf"/>
-                        <segue destination="hw9-di-krV" kind="show" identifier="showNavigation" id="ry7-ri-CLI"/>
+                        <segue destination="hw9-di-krV" kind="presentation" identifier="showNavigation" id="ry7-ri-CLI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2292" y="-213"/>
+            <point key="canvasLocation" x="-2292" y="-212.99999999999997"/>
         </scene>
         <!--Second Controller-->
         <scene sceneID="0Bc-BB-qBJ">
             <objects>
                 <viewController restorationIdentifier="doIt" storyboardIdentifier="doIt" id="SAI-Nh-7ZG" customClass="SecondController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="6Ph-HL-xn4"/>
-                        <viewControllerLayoutGuide type="bottom" id="rKR-rY-Xzm"/>
+                        <viewControllerLayoutGuide type="top" id="chD-rE-4EV"/>
+                        <viewControllerLayoutGuide type="bottom" id="KiP-iv-t4X"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Sqd-HX-Xda">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -120,7 +98,49 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4m7-cy-z8a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1486" y="-213"/>
+            <point key="canvasLocation" x="-1486" y="-212.99999999999997"/>
+        </scene>
+        <!--Main View Controller-->
+        <scene sceneID="2YA-h5-40d">
+            <objects>
+                <viewController storyboardIdentifier="MainViewController" id="N4T-FQ-0L1" customClass="MainViewController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vsX-Ux-JQ8"/>
+                        <viewControllerLayoutGuide type="bottom" id="wXa-fV-lAY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Otc-zh-d6T">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w7K-En-0CD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-376" y="-177"/>
+        </scene>
+        <!--Left View Controller-->
+        <scene sceneID="4Pv-jy-WDk">
+            <objects>
+                <viewController storyboardIdentifier="LeftViewController" id="MrK-SA-evj" customClass="LeftViewController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ywp-94-2O0"/>
+                        <viewControllerLayoutGuide type="bottom" id="DZV-FW-oFQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="V6h-rt-9w4">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="lks-YN-7XK">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lBi-6s-ugT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-942" y="-107"/>
         </scene>
         <!--Logave-->
         <scene sceneID="ZxW-6N-fa4">
@@ -132,8 +152,10 @@
                         <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell tag="200" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="Login" id="O6Q-w2-TQu" customClass="CustomCell" customModule="Logave" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="114" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="O6Q-w2-TQu" id="8D6-en-EAV">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PKD-Lr-8ZE">
@@ -161,6 +183,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Logave" id="eA4-Hb-d0m">
                         <barButtonItem key="rightBarButtonItem" title="GO!" style="done" id="VoG-7Q-HV4">
+                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="GoUser:" destination="2c4-tO-a9Y" id="hUb-YS-Wx4"/>
                             </connections>
@@ -170,7 +193,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dhp-r0-pxC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1245" y="604"/>
+            <point key="canvasLocation" x="-1502" y="570.99999999999989"/>
         </scene>
         <!--New Controller-->
         <scene sceneID="wAy-T1-Kt3">
@@ -187,7 +210,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QcZ-dr-oHH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2277" y="665"/>
+            <point key="canvasLocation" x="-2277" y="664.99999999999989"/>
         </scene>
     </scenes>
 </document>
