--- a/Logave/Base.lproj/Main.storyboard
+++ b/Logave/Base.lproj/Main.storyboard
@@ -49,8 +49,8 @@
                     </tableView>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Authorization" id="eA4-Hb-d0m">
-                        <barButtonItem key="rightBarButtonItem" title="GO!" style="done" id="VoG-7Q-HV4">
-                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <barButtonItem key="rightBarButtonItem" title="Login" style="done" id="VoG-7Q-HV4">
+                            <color key="tintColor" red="0.0" green="0.62528044871794874" blue="0.114921378106774" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="GoUser:" destination="2c4-tO-a9Y" id="hUb-YS-Wx4"/>
                             </connections>
@@ -65,18 +65,23 @@
         <!--New Controller-->
         <scene sceneID="wAy-T1-Kt3">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QcZ-dr-oHH" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="hw9-di-krV" customClass="NewController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ULD-lB-0AK">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
+                        <color key="tintColor" red="0.0" green="0.55148237180000004" blue="0.097995965290000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="2c4-tO-a9Y" kind="relationship" relationship="rootViewController" id="eCD-hn-tNm"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QcZ-dr-oHH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2264" y="-115"/>
         </scene>
